// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message Component Renders the UI as expected 1`] = `
<div
  className="messages"
>
  messages
  <div
    className="unread_count badge"
  >
    10
  </div>
</div>
`;

exports[`Message Component renders the UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`Renders the UI as expected 1`] = `
<div
  className="messages"
>
  messages
  <div
    className="unread_count badge"
  >
    10
  </div>
</div>
`;

exports[`renders the UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
